<resources>
    <string name="app_name">Priend</string>

    <string name="login_entry_text_email">Email</string>
    <string name="login_entry_text_next">Next</string>
    <string name="login_entry_message_require_email">You have to enter an email.</string>
    <string name="login_entry_message_not_verified">You have to verify your email first.</string>
    <string name="login_entry_message_server_error">There is an error occurred on the server.&#10;Please try again.</string>

    <string name="login_password_text_password">Password</string>
    <string name="login_password_text_login">Login</string>
    <string name="login_password_remember_me">Remember me</string>
    <string name="login_password_password_required">Please enter your password.</string>
    <string name="login_password_password_wrong">Password not matches.</string>
    <string name="login_password_forgot_password">Did you forget your password?</string>
    <string name="login_password_unknown_email">This account has been deleted or never existed.</string>
    <string name="login_password_server_error">Failed to login due to a server error.&#10;Please try again.</string>
    <string name="login_password_reset_ok">Priend sent a password reset link. Click the link within 1 week or you\'ll need to request a new one.</string>
    <string name="login_password_reset_server_error">Failed to create a link due to a server error.&#10;Please try again.</string>

    <string name="register_text_password">Password</string>
    <string name="register_text_confirm_password">Confirm password</string>
    <string name="register_text_name">Name</string>
    <string name="register_text_register">Register</string>
    <string name="register_message_password_required">You must enter a password.</string>
    <string name="register_message_password_alphabet_required">Both lower and upper case alphabet is required.</string>
    <string name="register_message_password_digit_required">A digit is required.</string>
    <string name="register_message_password_special_required">A special character is required.</string>
    <string name="register_message_password_length">Password must be 8 characters or more.</string>
    <string name="register_message_password_not_matches">Password not matches</string>
    <string name="register_message_name_required">You must enter your name.</string>
    <string name="register_message_welcome">Welcome! Please verify your email to login.</string>
    <string name="register_message_server_error">Failed to register due to a server error.&#10;Please try again.</string>
    <string name="register_message_unexpected_error">Failed to register due to an unexpected error.</string>

    <string name="home_text_query_hint">Search animals &amp; groups</string>
    <string name="home_age_unit_year">Years</string>
    <string name="home_age_unit_month">Months</string>
    <string name="home_age.unit_day">Days</string>
    <string name="home_weight_unit_kg" translatable="false">Kg</string>
    <string name="home_message_download_ok">List updated</string>
    <string name="home_message_error_account">Failed due to an account error.</string>
    <string name="home_message_error_server">Failed due to a server error.&#10;Please try again.</string>
    <string name="home_text_menu_settings">Settings</string>
    <string name="home_text_menu_hospitals">Hospitals</string>
    <string name="home_text_menu_community">Community</string>

    <string name="animal_text_name">Name</string>
    <string name="animal_text_birthday">Birthday</string>
    <string name="animal_text_sex_female">Female</string>
    <string name="animal_text_sex_male">Male</string>
    <string name="animal_text_sex_neutered_or_spayed">Neutered or Spayed</string>
    <string name="animal_text_weight">Weight</string>
    <string name="animal_text_password">Group password</string>
    <string name="animal_text_register">Register</string>
    <string name="animal_text_save">Save</string>
    <string name="animal_message_deletion_ok">Successfully deleted</string>
    <string name="animal_message_register_ok">Successfully registered</string>
    <string name="animal_message_edit_ok">Successfully edited.</string>
    <string name="animal_message_error_group_not_exists">The group does not exists.</string>
    <string name="animal_message_error_animal_not_exists">The animal does not exists.</string>
    <string name="animal_message_error_password_not_matches">Password not matches.</string>
    <string name="animal_message_error_enter_password">Please enter the group password.</string>
    <string name="animal_message_error_enter_name">What is his/her name?</string>
    <string name="animal_message_error_enter_weight">How much he/she weighs?</string>
    <string name="animal_message_error_account">Failed due to an account error.</string>
    <string name="animal_message_error_server">Failed due to a server error.&#10;Please try again.</string>
    <string name="animal_weight_unit_kg" translatable="false">Kg</string>

    <string name="group_text_add_group">Add Group</string>
    <string name="group_message_add_group">You can join existing group&#10;or create new one.</string>
    <string name="group_text_join">Join</string>
    <string name="group_text_create">Create</string>
    <string name="group_text_id">ID</string>
    <string name="group_text_name">Name</string>
    <string name="group_text_password">Password</string>
    <string name="group_text_add">Add</string>
    <string name="group_message_error_enter_id">Which group would you like to join?</string>
    <string name="group_message_error_unknown_id">Group does not exists.</string>
    <string name="group_message_error_enter_name">What is the name of your group?</string>
    <string name="group_message_error_enter_password">Please enter the password of the group</string>
    <string name="group_message_error_password_not_matches">Password not matches.</string>
    <string name="group_message_error_account">Failed due to an account error.</string>
    <string name="group_message_error_server">Failed due to a server error.&#10;Please try again.</string>
    <string name="group_message_ok">Group added.</string>
    <string name="group_text_id_prefix">#</string>

    <string name="calendar_text_title">Title</string>
    <string name="calendar_text_content">Content</string>
    <string name="calendar_action_collapse">Collapse</string>
    <string name="calendar_text_alert_this_memo">Alert this memo</string>
    <string name="calendar_message_error_server">Failed due to a server error. Please try again.</string>
    <string name="calendar_message_error_account">Failed due to an authentication error.</string>
    <string name="calendar_message_num_of_memo">There are {0} memos.</string>

    <string name="gallery_or_camera_gallery">From gallery</string>
    <string name="gallery_or_camera_camera">Take picture</string>

    <string name="record_text_title">Title</string>
    <string name="record_text_contents">Contents</string>
    <string name="record_text_memo">Memo</string>
    <string name="record_text_delete_memo">Delete this memo</string>
    <string name="record_text_delete_photo">Delete photo</string>
    <string name="record_text_delete">Delete</string>
    <string name="record_text_cancel">Cancel</string>
    <string name="record_message_memo_saved">Saved</string>
    <string name="record_message_memo_deleted">Deleted</string>
    <string name="record_message_error_account">Account error</string>
    <string name="record_message_error_server">Failed due to a server error. Please try again.</string>

    <string name="weight_chart_message_n_changed">Changes has committed.</string>
    <string name="weight_chart_message_error_required">Required</string>
    <string name="weight_chart_message_error_no_change">There is no change.</string>
    <string name="weight_chart_message_error_account">Failed to commit due to an account error.</string>
    <string name="weight_chart_message_error_server">Failed to commit due to a server error. Please try again.</string>
    <string name="weight_chart_text_date">Date</string>
    <string name="weight_chart_text_weight">Weight</string>
    <string name="weight_chart_text_push">Push</string>
    <string name="weight_chart_unit_kg">Kg</string>

    <string name="settings_text_settings">Setting</string>
    <string name="settings_text_account">Account</string>
    <string name="settings_text_alert">Alert</string>
    <string name="settings_description_account">User name</string>
    <string name="settings_description_alert">Push alert, Notification</string>

    <string name="account_settings_text_account">Account</string>
    <string name="account_settings_text_logout">Logout</string>
    <string name="account_settings_text_reset_password">Reset password</string>
    <string name="account_settings_text_delete_account">Delete account</string>
    <string name="account_settings_description_logout">Logout and go to login page.</string>
    <string name="account_settings_description_reset_password">Request an email to reset my password.</string>
    <string name="account_settings_description_delete_account">Delete my account permanently.</string>

    <string name="alert_settings_text_alert">Alert</string>
    <string name="alert_settings_text_calendar">Calendar</string>
    <string name="alert_settings_text_community">Community</string>
    <string name="alert_settings_item_weight">On weight update</string>
    <string name="alert_settings_item_birthday">On birthday</string>
    <string name="alert_settings_item_event">On other event</string>
    <string name="alert_settings_item_comment">On commented</string>

    <string name="delete_account_text_warning">Warning</string>
    <string name="delete_account_text_info1">Once you delete this account,</string>
    <string name="delete_account_text_info2">you can NOT roll it back.</string>
    <string name="delete_account_text_info3">Enter you email to confirm deletion.</string>

    <string name="delete_account_message_error_server">Failed to commit due to a server error. Please try again.</string>
    <string name="delete_account_message_check_email">Please check your email.</string>
    <string name="delete_account_message_error_account">Failed to commit due to a account error. Please try again.</string>

    <string name="reset_password_message_error_server">Failed to commit due to a server error. Please try again.</string>
    <string name="reset_password_message_check_email">Please check your email.</string>

    <string name="change_name_message_error_server">Failed to commit due to a server error. Please try again.</string>
    <string name="change_name_message_check_email">Please check your email.</string>
    <string name="change_name_message_error_account">Failed to commit due to a account error. Please try again.</string>

</resources>
