<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".home.activity.GroupActivity">

    <ImageButton
        android:id="@+id/group_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@color/grey_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_text_add_group"
        android:textColor="@color/secondaryColor"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/group_message_add_group"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/group_radio_button_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/group_text_join" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_edit_text_id_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_text_id"
            app:helperTextTextColor="@color/design_default_color_error"
            app:prefixText="@string/group_text_id_prefix"
            tools:helperText="@string/group_message_error_enter_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/group_edit_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_edit_text_password_join_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_text_password"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="@color/design_default_color_error"
            tools:helperText="@string/group_message_error_password_not_matches">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/group_edit_text_password_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@color/grey_400" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/group_radio_button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_text_create" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_edit_text_name_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/group_text_name"
            app:helperTextTextColor="@color/design_default_color_error"
            tools:helperText="@string/group_message_error_enter_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/group_edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_edit_text_password_create_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/group_text_password"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="@color/design_default_color_error"
            tools:helperText="@string/group_message_error_enter_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/group_edit_text_password_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/group_button_add"
            style="@style/Button.Filled.Rounded"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:text="@string/group_text_add"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>