<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"
    android:paddingTop="8dp"
    tools:context=".home.activity.AnimalActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/animal_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/grey_700" />

        <ImageButton
            android:id="@+id/animal_button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:padding="8dp"
            android:src="@drawable/ic_delete_black_24dp"
            android:tint="@color/grey_700"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/animal_edit_text_name_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/animal_text_name"
                app:helperTextTextColor="@color/design_default_color_error"
                tools:helperText="@string/animal_message_error_enter_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/animal_edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/animal_text_birthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/animal_edit_text_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/animal_radio_button_sex_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/animal_text_sex_female" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/animal_radio_button_sex_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/animal_text_sex_male" />
                </RadioGroup>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/animal_check_box_neutered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/animal_text_sex_neutered_or_spayed" />
            </LinearLayout>

            <Spinner
                android:id="@+id/animal_spinner_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_400" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/animal_edit_text_weight_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/animal_text_weight"
                android:visibility="gone"
                app:helperTextTextColor="@color/design_default_color_error"
                app:suffixText="@string/animal_weight_unit_kg"
                tools:helperText="@string/animal_message_error_enter_name"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/animal_edit_text_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/animal_edit_text_password_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/animal_text_password"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="@color/design_default_color_error"
                tools:helperText="@string/animal_message_error_password_not_matches">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/animal_edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/animal_button_register"
                style="@style/Button.Filled.Rounded"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:text="@string/animal_text_register"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>