<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="12dp"
    android:paddingTop="12dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/item_memo_text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="@string/calendar_text_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/item_memo_text_view_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/calendar_text_content" />

    <LinearLayout
        android:id="@+id/item_memo_layout_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_memo_image_view_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            tools:srcCompat="@drawable/ic_priend" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_memo_button_collapse"
            style="@style/Button.Text.SecondaryColored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/calendar_action_collapse"
            android:textAllCaps="false" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="12dp"
        android:background="@color/grey_400" />

</LinearLayout>