<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/settings_image_view_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:src="@drawable/ic_back" />

    <ImageView
        android:id="@+id/settings_imageView"
        android:layout_width="115dp"
        android:layout_height="123dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_settings"
        android:tint="@color/secondaryDarkColor" />

    <TextView
        android:id="@+id/settings_text_view_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/settings_text_settings"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/settings_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/settings_container_item_account"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="39dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_account"
                    android:tint="@color/secondaryDarkColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_text_account"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/settings_item_text_view_Username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/settings_description_account" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings_container_item_alert"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="39dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_alert"
                    android:tint="@color/secondaryDarkColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:tint="@color/secondaryDarkColor">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_text_alert"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/settings_description_alert" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>